# skillbook

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.claude/commands/: skillbook.md
src/skillbook/: __init__.py  __main__.py  agent_build.py  cli.py  config.py  models.py  profile.py  prompts.py
src/skillbook/generate/: __init__.py  chapters.py  outline.py  pipeline.py  roadmap.py
src/skillbook/llm/: __init__.py  base.py  litellm_provider.py
src/skillbook/render/: __init__.py  assemble.py  base.py  playwright_renderer.py  verify.py
src/skillbook/render/themes/: base.css  casual.css  scientific.css
src/skillbook/resources/: __init__.py  base.py  gather.py  validate.py  web.py  wikipedia.py
tests/: test_agent.py  test_cli.py  test_llm.py  test_models.py  test_outline.py  test_pipeline.py  test_render.py  test_resources.py
